<resources>
    <string name="app_name">Gnoosic</string>
    <string name="title_welcome">Welcome to Gnoosic</string>
    <string name="welcome">Gnod is a self-adapting system that learns about the outer world by asking its visitors what they like and what they don\'t like. In this instance of Gnod all is about music. Gnod is kind of a search engine for music you don\'t know about. It will ask you what music you like and then think about what you might like too. When I set Gnod online its database was completely empty. Now it contains hundreds of thousands of bands and quite some knowledge about who likes what. And Gnod learns more every day. Enjoy!</string>
    <string name="history">history</string>
    <string name="teach_gnod">To teach Gnod what you are like, please type in 3 bands that you already know and like.</string>
    <string name="one_of_my_fav_band">One of my favorite bands is...</string>
    <string name="continue_button_text">continue</string>
    <string name="saved_artists">Saved Artists</string>
    <string name="youtube_api_key" translatable="false">AIzaSyDg2njTmJWxXuSHDcnRXR_3A1_9s0LaBJY</string>
    <string name="i_like_it">I like it</string>
    <string name="i_don_t_like_it">I don\'t like it</string>
    <string name="i_don_t_know">I don\'t know</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="keep_saved_artists">Conserver les artistes likés dans la mémoire?</string>
    <string name="clear_history">clear history?</string>
    <string name="delete_all_artists">This will delete all like artists</string>
    <string name="theme">Theme</string>
    <string name="confirm_delete">Voulez-vous vraiment supprimer tout l\'historique?</string>
    <string name="cancel">Annuler</string>
    <string name="mood_mode_button_text">Mode Mood</string>
    <string name="classic_mode_button_text">Mode Classique</string>
    <string name="Warning">Attention !</string>
    <string name="mood_analysing">Veuillez patienter, il ne faut pas avoir peur...</string>
    <string name="settings">Settings</string>
</resources>
